objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>App_Code__c</fullName>
        <externalId>true</externalId>
        <label>App Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>App_Portal_URL__c</fullName>
        <description>Store a Application URL here.  If one exists then the Application will show up in My Links.  If not, then it will be hidden.</description>
        <inlineHelpText>Store a Application URL here.  If one exists then the Application will show up in My Links.  If not, then it will be hidden.</inlineHelpText>
        <label>App Portal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>App_URL__c</fullName>
        <description>Store a Home Page URL here.  If one exists then the Home Page will show up in My Links.  If not, then it will be hidden.</description>
        <inlineHelpText>Store a Home Page URL here.  If one exists then the Home Page will show up in My Links.  If not, then it will be hidden.</inlineHelpText>
        <label>App URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ApproverType__c</fullName>
        <label>ApproverType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field depicts whether or not this is a base access system, like active directory.  This flag is user segment independent -- which means it applies to everyone.</description>
        <inlineHelpText>This field depicts whether or not this is a base access system, like active directory.  This flag is user segment independent -- which means it applies to everyone.</inlineHelpText>
        <label>Base Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Purina</fullName>
                </value>
                <value>
                    <fullName>WinField</fullName>
                </value>
                <value>
                    <fullName>FGI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Businesslink_url__c</fullName>
        <description>This is the URL users must go to first in order to log into the application.</description>
        <label>BusinessLink URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Children_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Child Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connected_App_ID__c</fullName>
        <label>Connected App ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connected_App__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if the application does not require a manual provisioning case to be created.</inlineHelpText>
        <label>Does Not Need Manual Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Admin Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMS_Application_Object_Name__c</fullName>
        <description>This is the name of the profile, permission set, or custom permission that should be added to the user</description>
        <inlineHelpText>This is the name of the profile, permission set, or custom permission that should be added to the user</inlineHelpText>
        <label>EMS Application Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Application_Type__c</fullName>
        <label>EMS Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Permission</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMS Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FG_Account_Field__c</fullName>
        <label>FG Account Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer_Number__c</fullName>
                </value>
                <value>
                    <fullName>PAES_Number__c</fullName>
                </value>
                <value>
                    <fullName>AIMS_Number__c</fullName>
                </value>
                <value>
                    <fullName>GUID__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FG_Admin_Instructions__c</fullName>
        <label>Admin Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FG_Default_user_acct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default User Account for FG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FG_Filter_prefix__c</fullName>
        <label>Fine-Grain Filter prefix</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FD</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>WF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FG_Instructions__c</fullName>
        <label>External User Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FG_Max_Ents__c</fullName>
        <label>Number of FG Ents Allowed Per Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FG_Search_Filter__c</fullName>
        <label>FG Search Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use User Account Search Filter</fullName>
                </value>
                <value>
                    <fullName>Use Parent Account Search Filter</fullName>
                </value>
                <value>
                    <fullName>No Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FG_Web_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fine Grain Uses Web Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FG_mgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fine-Grained Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Designation__c</fullName>
        <inlineHelpText>This is the text for a potential group representation, like the AD group.</inlineHelpText>
        <label>Group Designation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for the portal site.  It directs the portal on how to use the URLs present in the object.</description>
        <label>Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Delegated_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Queue Can Approve for Del.Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Group__c</fullName>
        <label>Internal Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if there is an approval process if no roles are on the request</description>
        <inlineHelpText>This determines if there is an approval process if no roles are on the request</inlineHelpText>
        <label>Needs A Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisioning_Queue__c</fullName>
        <defaultValue>&quot;Customer_Support&quot;</defaultValue>
        <label>Manual Provisioning Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Queue Name</description>
        <label>Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_description__c</fullName>
        <label>Short description</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <description>This is the email given to customers as support for this application.</description>
        <inlineHelpText>This is the email given to customers as support for this application.</inlineHelpText>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Support_Phone__c</fullName>
        <description>This is the phone number given to customers as support for this application.</description>
        <inlineHelpText>This is the phone number given to customers as support for this application.</inlineHelpText>
        <label>Support Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>System_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This describes if the application is a system application vs a business application.  It usually provisions base-level access.</description>
        <label>System Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_AD_Role_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roles Use AD Role Name Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Migrated_Apps</fullName>
        <columns>NAME</columns>
        <columns>App_Code__c</columns>
        <columns>App_URL__c</columns>
        <columns>System_Application__c</columns>
        <columns>Requires_Approval__c</columns>
        <columns>ApproverType__c</columns>
        <columns>Approver__c</columns>
        <columns>Home_Page__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Businesslink_url__c</columns>
        <columns>Connected_App__c</columns>
        <columns>FG_Max_Ents__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Migrated Apps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>No_Manual_Steps</fullName>
        <columns>NAME</columns>
        <columns>App_Code__c</columns>
        <columns>Migrated__c</columns>
        <columns>Connected_App_ID__c</columns>
        <columns>Description__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Connected_App__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>No Manual Steps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Enforce_Required_Fields_for_ApprovalType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ApproverType__c)  = &apos;Queue&apos;, Queue_Name__c = null)</errorConditionFormula>
        <errorDisplayField>Queue_Name__c</errorDisplayField>
        <errorMessage>Please enter a value in Queue Name for the Approver Queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Required_Fields_for_UserApprover</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ApproverType__c)  = &apos;User&apos;,  Approver__c  = null)</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Please enter a value for the User Approver</errorMessage>
    </validationRules>
</CustomObject>